[package]
name = "webvttconverter"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.6"
glib = "0.15.4"
gst = { package = "gstreamer", version = "0.18.3" }
gstreamer-app = "0.18.0"
gstreamer-base = "0.18.0"
gstreamer-video = { version = "0.18.5", features = ["v1_16"] }
ctrlc = "3.2.1"
signal-hook = "0.3.13"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tungstenite = "0.17"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "2"
