[package]
name = "webvttconverter"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.6"
glib = "0.15.4"
gst = { package = "gstreamer", version = "0.18.3" }
gstreamer-app = "0.18.0"
gstreamer-base = "0.18.0"
gstreamer-video = { version = "0.18.5", features = ["v1_16"] }
ctrlc = "3.2.1"
signal-hook = "0.3.13"
log = "0.4.14"
pretty_env_logger = "0.4.0"
gst-plugin-textwrap = { git = "https://gitlab.freedesktop.org/rafaelcaricio/gst-plugins-rs.git", branch = "transbin-accept-any-video-caps", version = "0.9.0" }
gst-plugin-rusoto = { git = "https://gitlab.freedesktop.org/rafaelcaricio/gst-plugins-rs.git", branch = "transbin-accept-any-video-caps", version = "0.9.0" }
gst-plugin-closedcaption = { git = "https://gitlab.freedesktop.org/rafaelcaricio/gst-plugins-rs.git", branch = "transbin-accept-any-video-caps", version = "0.9.0" }
gst-plugin-vosk = { path = "../../opensource/gst-plugin-vosk" }
