[package]
name = "webvttconverter"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.6"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
gst-mpegts = { package = "gstreamer-mpegts-sys", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
gst-plugin-videofx = { git = "https://gitlab.freedesktop.org/rafaelcaricio/gst-plugins-rs.git", branch = "add-imgcmp" }
ctrlc = "3.2.1"
signal-hook = "0.3.13"
#tokio = { version = "1.17", features = ["full"] }
#axum = "0.4.5"
#tower = "0.4.12"
#tower-http = { version = "0.2.2", features = ["add-extension"] }
clap = { version = "3" , features = ["derive"] }
url = "2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
